@@ -756,9 +756,13 @@ public class ConfigedMain implements ListSelectionListener {
 					loginDialog.setVisible(false);
 
 					Logging.info("setting mainframe visible");
-					mainFrame.setVisible(true);
-					mainFrame.toFront();
 
+					mainFrame.setVisible(true);
+
+					// init splitpanes only when frame already visible
+					mainFrame.initSplitPanes();
+
+					mainFrame.toFront();
 				});
 			}
 		}.start();
@@ -1380,9 +1384,6 @@ public class ConfigedMain implements ListSelectionListener {
 		// center the frame:
 		locateFrame();
 
-		// set splitpanes before making the frame visible
-		mainFrame.initSplitPanes();
-
 		// init visual states
 		Logging.debug(configedMain, "mainframe nearly initialized");
 	}
@@ -1730,7 +1731,7 @@ public class ConfigedMain implements ListSelectionListener {
 					+ getSelectedClients().length);
 
 			// selected clients that are in the pclist0
-			pclist = Set.of(getSelectedClients());
+			pclist = new HashSet<>(Arrays.asList(getSelectedClients()));
 			pclist.retainAll(pclist0.keySet());
 		} else {
 			pclist = pclist0.keySet();
@@ -3126,7 +3127,7 @@ public class ConfigedMain implements ListSelectionListener {
 			mainFrame.getPanelHostConfig().initEditing("  " + myServer + " (configuration server)",
 					additionalConfigs.get(0), persistenceController.getConfigDataService().getConfigListCellOptionsPD(),
 					additionalConfigs, additionalconfigurationUpdateCollection, true,
-					OpsiServiceNOMPersistenceController.PROPERTY_CLASSES_SERVER);
+					OpsiServiceNOMPersistenceController.getPropertyClassesServer());
 		} else if (editingTarget == EditingTarget.DEPOTS) {
 			depotsList.setEnabled(true);
 			depotsList.requestFocus();
@@ -3134,18 +3135,18 @@ public class ConfigedMain implements ListSelectionListener {
 			List<Map<String, Object>> additionalConfigs = produceAdditionalConfigs(Arrays.asList(getSelectedDepots()));
 			Map<String, Object> mergedVisualMap = mergeMaps(additionalConfigs);
 			removeKeysStartingWith(mergedVisualMap,
-					OpsiServiceNOMPersistenceController.CONFIG_KEY_STARTERS_NOT_FOR_CLIENTS);
+					OpsiServiceNOMPersistenceController.getConfigKeyStartersNotForClients());
 			Map<String, Object> originalMap = mergeMaps(persistenceController.getConfigDataService()
 					.getHostsConfigsWithoutDefaults(Arrays.asList(getSelectedDepots())));
 			mainFrame.getPanelHostConfig().initEditing(getSelectedDepotsString(), mergedVisualMap,
 					persistenceController.getConfigDataService().getConfigListCellOptionsPD(), additionalConfigs,
 					additionalconfigurationUpdateCollection, false,
-					OpsiServiceNOMPersistenceController.PROPERTY_CLASSES_CLIENT, originalMap, false);
+					OpsiServiceNOMPersistenceController.getPropertyClassesClient(), originalMap, false);
 		} else {
 			List<Map<String, Object>> additionalConfigs = produceAdditionalConfigs(Arrays.asList(getSelectedClients()));
 			Map<String, Object> mergedVisualMap = mergeMaps(additionalConfigs);
 			removeKeysStartingWith(mergedVisualMap,
-					OpsiServiceNOMPersistenceController.CONFIG_KEY_STARTERS_NOT_FOR_CLIENTS);
+					OpsiServiceNOMPersistenceController.getConfigKeyStartersNotForClients());
 			Map<String, ListCellOptions> configListCellOptions = deepCopyConfigListCellOptions(
 					persistenceController.getConfigDataService().getConfigListCellOptionsPD());
 			if (ServerFacade.isOpsi43() && getSelectedClients().length != 0) {
@@ -3163,7 +3164,7 @@ public class ConfigedMain implements ListSelectionListener {
 					.getHostsConfigsWithoutDefaults(Arrays.asList(getSelectedClients())));
 			mainFrame.getPanelHostConfig().initEditing(getSelectedClientsString(), mergedVisualMap,
 					configListCellOptions, additionalConfigs, additionalconfigurationUpdateCollection, false,
-					OpsiServiceNOMPersistenceController.PROPERTY_CLASSES_CLIENT, originalMap, true);
+					OpsiServiceNOMPersistenceController.getPropertyClassesClient(), originalMap, true);
 		}
 
 		return true;
@@ -3248,9 +3249,9 @@ public class ConfigedMain implements ListSelectionListener {
 				logfiles.put(logType, Configed.getResourceValue("MainFrame.TabActiveForSingleClient"));
 			}
 		} else {
-			mainFrame.activateLoadingPane();
+			mainFrame.activateLoadingCursor();
 			logfiles = persistenceController.getLogDataService().getLogfile(firstSelectedClient, logtypeToUpdate);
-			mainFrame.disactivateLoadingPane();
+			mainFrame.disactivateLoadingCursor();
 			Logging.debug(this, "log pages set");
 		}
 
@@ -3506,6 +3507,7 @@ public class ConfigedMain implements ListSelectionListener {
 	}
 
 	public void reload() {
+		mainFrame.activateLoadingPane(Configed.getResourceValue("MainFrame.jMenuFileReload") + " ...");
 		SwingUtilities.invokeLater(this::reloadData);
 	}
 
@@ -4165,6 +4167,7 @@ public class ConfigedMain implements ListSelectionListener {
 		}.start();
 	}
 
+	@SuppressWarnings({ "java:S1874" })
 	public String getBackendInfos() {
 		return persistenceController.getConfigDataService().getBackendInfos();
 	}
@@ -4196,7 +4199,7 @@ public class ConfigedMain implements ListSelectionListener {
 			return;
 		}
 
-		mainFrame.activateLoadingPane();
+		mainFrame.activateLoadingCursor();
 
 		if (resetLocalbootProducts) {
 			persistenceController.getProductDataService().resetLocalbootProducts(getSelectedClients(),
@@ -4208,7 +4211,7 @@ public class ConfigedMain implements ListSelectionListener {
 		}
 
 		requestReloadStatesAndActions();
-		mainFrame.disactivateLoadingPane();
+		mainFrame.disactivateLoadingCursor();
 	}
 
 	public boolean freeAllPossibleLicencesForSelectedClients() {
@@ -4395,11 +4398,11 @@ public class ConfigedMain implements ListSelectionListener {
 	}
 
 	public void reloadHosts() {
-		mainFrame.activateLoadingPane();
+		mainFrame.activateLoadingCursor();
 		persistenceController.reloadData(ReloadEvent.HOST_DATA_RELOAD.toString());
 		refreshClientListKeepingGroup();
 
-		mainFrame.disactivateLoadingPane();
+		mainFrame.disactivateLoadingCursor();
 	}
 
 	public void createClients(List<List<Object>> clients) {
@@ -4617,7 +4620,7 @@ public class ConfigedMain implements ListSelectionListener {
 			sortedKeys.sort(Comparator.comparing(String::toString));
 			dialogRemoteControl.setListModel(new DefaultComboBoxModel<>(sortedKeys.toArray(new String[0])));
 
-			dialogRemoteControl.setCellRenderer(new ListCellRendererByIndex(entries, tooltips, null, ""));
+			dialogRemoteControl.setCellRenderer(new ListCellRendererByIndex(entries, tooltips, ""));
 
 			dialogRemoteControl
 					.setTitle(Globals.APPNAME + ":  " + Configed.getResourceValue("MainFrame.jMenuRemoteControl"));
@@ -4791,7 +4794,7 @@ public class ConfigedMain implements ListSelectionListener {
 		fAskCopyClient.setVisible(true);
 
 		if (fAskCopyClient.getResult() == 2) {
-			mainFrame.activateLoadingPane();
+			mainFrame.activateLoadingCursor();
 			String newClientName = jTextHostname.getText();
 			boolean proceed = true;
 			if (newClientName.isEmpty()) {
@@ -4817,7 +4820,7 @@ public class ConfigedMain implements ListSelectionListener {
 				activateGroup(false, activatedGroupModel.getGroupName());
 				setClient(newClientNameWithDomain);
 			}
-			mainFrame.disactivateLoadingPane();
+			mainFrame.disactivateLoadingCursor();
 		}
 	}
 
